edited the code

--- a/indexxx.html
+++ b/indexxx.html
@@ -10,6 +10,7 @@
 <h2>Don't be scared it isn't that hard!</h2>
 <p>HTML5 <em>really</em> isn't so hard!</p> 
 <p>Soon you will &hearts; using HTML. </p> 
+<p> SLAY SLAY SLAY ALL DAY </p>
 <p>You can put lots of text here if you want.
 We could go on and on with fake text for you to read, but let's get back to the book. </p> 
 </body> 
